--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  background-color: #000;
+}
+
 .img-flex {
   display: block;
   width: 100%;
@@ -77,7 +81,7 @@ a {
 
   div {
     display: inline-block;
-    max-width: 42%;
+    max-width: 40%;
   }
 
   h1 {
@@ -100,6 +104,10 @@ a {
     font-size: 120%;
     line-height: 1.5;
   }
+
+  .img-flex {
+    padding: 2rem 0;
+  }
 }
 
 @media only screen and (min-width: 90em) {
@@ -107,5 +115,12 @@ a {
   html {
     font-size: 130%;
     line-height: 1.5;
+  }
+
+  .div {
+  }
+
+  .img-flex {
+
   }
 }
