--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@ div {
   margin: 1rem;
 }
 
+.wrapper {
+  margin: 0;
+  max-width: none;
+}
+
 h1 {
   margin: 0;
   padding-bottom: 1.25rem;
@@ -118,9 +123,17 @@ a:hover {
   }
 
   .div {
+    max-width: none;
+    vertical-align: middle;
+  }
+
+  .wrapper {
+    margin-left: 10em;
   }
 
   .img-flex {
-
+    max-width: 30%;
+    margin: 0 auto;
   }
+
 }
